--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
 *.meta
 *.cd
 *.us
-Library\PackageCache\*
+
 /Library/
-
-Library/PackageCache
-/Library/PackageCache
-
-Library/PackageCache/
-/Library/PackageCache/
-
-Library/PackageCache/*
-/Library/PackageCache/*
-
-\Library\PackageCache\
-\Library\PackageCache\*
+\Library\
